--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head><meta name="robots" content="index, follow">
+<meta name="description" content="Restaurante Pimenta Rosa em Juquehy. Sabores à beira-mar com pratos especiais e ambiente acolhedor.">
+<meta name="keywords" content="Restaurante em Juquehy, Pimenta Rosa, restaurante São Sebastião, comida praia Juquehy">
+<meta name="author" content="Restaurante Pimenta Rosa">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapéu de Sol - Juquehy</title>
+    <title>Restaurante em Juquehy | Pimenta Rosa – São Sebastião SP</title>
     <style>
-        body {
+        <!-- Botão WhatsApp Flutuante -->
+<a href="https://wa.me/5512996713303" 
+   class="whatsapp-float" 
+   target="_blank"
+   aria-label="Fale conosco no WhatsApp">
+   💬
+</a>
+
+<style>
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 25px;
+    right: 25px;
+    background-color: #25D366;
+    color: white;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    z-index: 1000;
+}
+
+.whatsapp-float:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+}
+</style>body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
