--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             padding: 20px;
         }
     </style>
-</head>
+</head><meta name="google-site-verification" content="sDp-m48vvqddIL5jIzQRAuG_Yzzo2S_G_208-tW2v8A" />
 <body>
 
 <header>
