--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head><meta name="robots" content="index, follow">
+<head><meta name="google-site-verification" content="sDp-m48vvqddIL5jIzQRAuG_Yzzo2S_G_208-tW2v8A" /><meta name="robots" content="index, follow">
 <meta name="description" content="Restaurante Pimenta Rosa em Juquehy. Sabores à beira-mar com pratos especiais e ambiente acolhedor.">
 <meta name="keywords" content="Restaurante em Juquehy, Pimenta Rosa, restaurante São Sebastião, comida praia Juquehy">
 <meta name="author" content="Restaurante Pimenta Rosa">
@@ -121,7 +121,7 @@
             padding: 20px;
         }
     </style>
-</head>google-site-verification: google6d989d5d047ad473.html
+</head>
 <body>
 
 <header>
