--- a/index.html
+++ b/index.html
@@ -1,193 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head><meta name="google-site-verification" content="sDp-m48vvqddIL5jIzQRAuG_Yzzo2S_G_208-tW2v8A" /><meta name="robots" content="index, follow">
-<meta name="description" content="Restaurante Pimenta Rosa em Juquehy. Sabores à beira-mar com pratos especiais e ambiente acolhedor.">
-<meta name="keywords" content="Restaurante em Juquehy, Pimenta Rosa, restaurante São Sebastião, comida praia Juquehy">
-<meta name="author" content="Restaurante Pimenta Rosa">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurante em Juquehy | Pimenta Rosa – São Sebastião SP</title>
-    <style>
-        <!-- Botão WhatsApp Flutuante -->
-<a href="https://wa.me/5512996713303" 
-   class="whatsapp-float" 
-   target="_blank"
-   aria-label="Fale conosco no WhatsApp">
-   💬
-</a>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pimenta Rosa Delivery</title>
 
 <style>
-.whatsapp-float {
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 25px;
-    right: 25px;
-    background-color: #25D366;
-    color: white;
-    border-radius: 50%;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: #fff8f8;
     text-align: center;
-    font-size: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    z-index: 1000;
 }
 
-.whatsapp-float:hover {
-    transform: scale(1.1);
-    box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+header {
+    background-image: url('https://images.unsplash.com/photo-1555992336-03a23c5b5b4b');
+    background-size: cover;
+    background-position: center;
+    color: white;
+    padding: 80px 20px;
 }
-</style>body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fff8f0;
-            color: #333;
-        }
-        header {
-            background-color: #ff7f50;
-            padding: 20px;
-            text-align: center;
-            color: white;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #ffa07a;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-        .hero {
-            background-image: url('https://example.com/imagem-do-restaurante.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 3em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-        }
-        .section {
-            padding: 50px;
-            text-align: center;
-        }
-        .section h2 {
-            color: #ff7f50;
-        }
-        .menu-item {
-            margin: 20px 0;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-        }
-        .gallery img {
-            width: 300px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 8px;
-            transition: transform 0.3s;
-        }
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            max-width: 400px;
-            margin: 0 auto;
-        }
-        form input, form textarea, form button {
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 1em;
-        }
-        footer {
-            background-color: #ff7f50;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-    </style>
+
+h1 {
+    font-size: 40px;
+    margin: 0;
+}
+
+section {
+    padding: 40px 20px;
+}
+
+.cardapio-item {
+    background: white;
+    margin: 15px auto;
+    padding: 15px;
+    width: 80%;
+    max-width: 400px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+button {
+    background-color: #d94f70;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #b93b59;
+}
+
+footer {
+    background: #333;
+    color: white;
+    padding: 20px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-    <h1>Chapéu de Sol - Juquehy</h1>
+    <h1>Pimenta Rosa Delivery</h1>
+    <p>Sabores à beira-mar em Juquehy</p>
+    <br>
+    <a href="#cardapio"><button>Ver Cardápio</button></a>
 </header>
 
-<nav>
-    <a href="#sobre">Sobre</a>
-    <a href="#menu">Menu</a>
-    <a href="#galeria">Galeria</a>
-    <a href="#contato">Contato</a>
-</nav>
-
-<div class="hero">
-    Bem-vindo ao Chapéu de Sol
-</div>
-
-<section id="sobre" class="section">
+<section>
     <h2>Sobre Nós</h2>
-    <p>O restaurante Chapéu de Sol, localizado em Juquehy, é famoso por sua culinária praiana, pratos frescos e ambiente acolhedor à beira-mar. Desfrute de uma experiência gastronômica inesquecível com vista para a praia.</p>
+    <p>Experiência gastronômica com pratos especiais e ambiente acolhedor em Juquehy.</p>
 </section>
 
-<section id="menu" class="section">
-    <h2>Menu</h2>
-    <div class="menu-item">
-        <h3>Peixe Grelhado</h3>
-        <p>Peixe fresco do dia grelhado, servido com legumes e arroz.</p>
-    </div>
-    <div class="menu-item">
-        <h3>Moqueca de Camarão</h3>
-        <p>Camarões suculentos cozidos em molho de dendê e leite de coco.</p>
-    </div>
-    <div class="menu-item">
-        <h3>Saladas Tropicais</h3>
-        <p>Mix de folhas frescas com frutas tropicais e molhos especiais.</p>
-    </div>
-</section>
+<section id="cardapio">
+    <h2>Cardápio</h2>
 
-<section id="galeria" class="section">
-    <h2>Galeria</h2>
-    <div class="gallery">
-        <img src="https://example.com/foto1.jpg" alt="Prato 1">
-        <img src="https://example.com/foto2.jpg" alt="Prato 2">
-        <img src="https://example.com/foto3.jpg" alt="Ambiente">
-        <img src="https://example.com/foto4.jpg" alt="Praia">
+    <div class="cardapio-item">
+        <h3>Moqueca de Peixe</h3>
+        <p>R$ 89</p>
     </div>
-</section>
 
-<section id="contato" class="section">
-    <h2>Contato</h2>
-    <p>Endereço: Rua da Praia, 123, Juquehy, SP</p>
-    <p>Telefone: (12) 3456-7890</p>
-    <p>Email: contato@chapeudesol.com.br</p>
+    <div class="cardapio-item">
+        <h3>Risoto de Camarão</h3>
+        <p>R$ 95</p>
+    </div>
 
-    <h3>Faça uma Reserva</h3>
-    <form>
-        <input type="text" placeholder="Nome" required>
-        <input type="email" placeholder="Email" required>
-        <input type="tel" placeholder="Telefone" required>
-        <textarea placeholder="Mensagem" rows="4" required></textarea>
-        <button type="submit">Enviar</button>
-    </form>
+    <div class="cardapio-item">
+        <h3>Suco Natural</h3>
+        <p>R$ 12</p>
+    </div>
+
+    <br>
+    <a href="https://wa.me/55SEUNUMEROAQUI?text=Olá%20quero%20fazer%20um%20pedido">
+        <button>Fazer Pedido no WhatsApp</button>
+    </a>
 </section>
 
 <footer>
-    &copy; 2026 Chapéu de Sol - Todos os direitos reservados
+    © 2026 Pimenta Rosa - Juquehy
 </footer>
 
 </body>
